--- a/docker/Dockerfile-Rabbit
+++ b/docker/Dockerfile-Rabbit
@@ -1,3 +1,7 @@
 FROM rabbitmq:3.5-management
 
 RUN rabbitmq-plugins enable rabbitmq_amqp1_0
+
+RUN echo "[{rabbit, [{loopback_users,[]}]},{rabbitmq_management,[{load_definitions, \"/etc/rabbitmq/rabbit.json\"}]}]." > /etc/rabbitmq/rabbitmq.config
+
+ADD ./rabbit.json /etc/rabbitmq/
