--- a/phoenix-all/pom.xml
+++ b/phoenix-all/pom.xml
@@ -14,6 +14,8 @@
     </properties>
     <artifactId>phoenix-all</artifactId>
     <packaging>pom</packaging>
+    <name>Phoenix - Build Management</name>
+    <description>Manages Plugin Configuration and Version information.</description>
     <dependencies>
     </dependencies>
     <dependencyManagement>
