--- a/phoenix-client/pom.xml
+++ b/phoenix-client/pom.xml
@@ -2,6 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <version>0.0.2</version>
   <groupId>com.phoenix</groupId>
+  <name>Phoenix - Client</name>
+  <description>NodeJS Server serving as frontend for the stack</description>
   <artifactId>phoenix-client</artifactId>
     <build>
         <plugins>
