--- a/phoenix-server/pom.xml
+++ b/phoenix-server/pom.xml
@@ -11,13 +11,8 @@
         <relativePath>../phoenix-all/pom.xml</relativePath>
     </parent>
     <artifactId>phoenix-server</artifactId>
-    <name>Spring Boot Data MongoDB Sample</name>
-    <description>Spring Boot Data MongoDB Sample</description>
-    <url>http://projects.spring.io/spring-boot/</url>
-    <organization>
-        <name>Pivotal Software, Inc.</name>
-        <url>http://www.spring.io</url>
-    </organization>
+    <name>Phoenix - Server</name>
+    <description>Simple REST server to provide and manage TOs</description>
     <properties>
         <docker.image.prefix>neitsch</docker.image.prefix>
     </properties>
@@ -27,13 +22,13 @@
             <artifactId>spring-integration-amqp</artifactId>
         </dependency>
         <dependency>
-    <groupId>org.springframework.integration</groupId>
-    <artifactId>spring-integration-java-dsl</artifactId>
-</dependency>
-    <dependency>
-      <groupId>org.springframework.integration</groupId>
-      <artifactId>spring-integration-mongodb</artifactId>
-    </dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-java-dsl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mongodb</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
