--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,41 @@
     <artifactId>phoenix-parent</artifactId>
     <version>0.0.2</version>
     <packaging>pom</packaging>
+    <name>Phoenix - Parent</name>
+    <description>The parent simple contains all modules.</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <releases>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </pluginRepository>
+    </pluginRepositories>
+    <ciManagement>
+        <system>Travis CI</system>
+        <url>https://travis-ci.org/Neitsch/Phoenix</url>
+    </ciManagement>
+    <scm>
+        <url>https://github.com/Neitsch/Phoenix</url>
+    </scm>
     <modules>
         <module>phoenix-bom</module>
         <module>phoenix-engine</module>
