--- a/phoenix-client/package.json
+++ b/phoenix-client/package.json
@@ -49,10 +49,12 @@
     "immutable": "^3.7.6",
     "jquery": "^2.2.0",
     "moment": "^2.11.2",
+    "notifyjs-browser": "^0.4.1",
     "promise-retry": "^1.0.2",
     "react": "^0.14.7",
     "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "redux": "^3.3.1"
