--- a/phoenix-client/package.json
+++ b/phoenix-client/package.json
@@ -53,6 +53,7 @@
     "promise-retry": "^1.0.2",
     "react": "^0.14.7",
     "react-addons-pure-render-mixin": "^0.14.7",
+    "react-autocomplete": "^0.2.0",
     "react-dom": "^0.14.7",
     "react-modal": "^0.6.1",
     "react-redux": "^4.4.0",
